          - BiasedMatrixFactorization: fixed a wrong constant factor in
            ComputeLoss()
          - BPRMF: add optional bold driver heuristic for learn rate adaptation
          - MatrixFactorization:
            - use method from Eval namespace to compute fit
            - NumFactors: int -> uint
          - ItemRecommendation.MF: NumFactors: int -> uint
          - UserItemBaseline: use several iterations of alternating
            optimization instead of just one; implement IIterativeModel
	- command-line tools
          - item prediction: rename --predict-for-users-file to
            --relevant-users for consistency with --relevant-items
          - rating prediction: support all IIterativeModel recommenders, not
            just the ones derived from MatrixFactorization
          - write out predictions every N iterations with --prediction-file=F
            and --find-iter=N (bug reported by Alejandro Bellogin)
          - write loading time to STDERR, not STDOUT
          - support online evaluation (see below)
          - allow several --recommender-options arguments
	- evaluation
          - RatingEval
            - add EvaluateOnline() method
            - rename RatingPredictionMeasures to Measures
          - ItemPredictionEval
            - add EvaluateOnline() method
            - rename ItemPredictionMeasures to Measures
        - data structures
          - add interfaces IBooleanMatrix and IPosOnlyFeedback
          - make PosOnlyFeedback generic to allow different backends
          - add SparseBooleanMatrixBinarySearch and SparseBooleanMatrixStatic
          - IMatrix<T> interface: add Transpose() method
          - SparseBooleanMatrix: remove Rows() method (not necessary)
          - Matrix<T>:
            - perform bounds check only when DEBUG is set
            - faster GetRow()/SetRow()
            - generic return types
            - additional constructor with list of list of T as argument
          - MatrixUtils: